Fix for questionnaire not showing in Chrome

--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,7 @@ body {
 	margin: 0;
 }
 
-#content-wrapper {flex: 1 0 auto;}
+#content-wrapper {flex: 1 0 auto; position: relative;}
 #page-footer {flex-shrink: 0; margin: 7px;}
 
 #consent-form .h1 {text-decoration: underline;}
@@ -15,7 +15,7 @@ body {
 
 .btn-primary {font-size: large; font-weight: bold;}
 
-#qualtrics-frame {border: none; width: 100%; height: 100%; display: none;}
+#qualtrics-frame {border: none; width: 100%; height: 100%; display: none; position: absolute; left: 0;}
 
 #webgl-content * {margin: 0; padding: 0}
 #webgl-content {margin: 0 auto; display: table}
